docs/book/samples/appc/commas_check.out
error[formatting]: kanso has no commas; enumerations are space-separated
  --> commas_check.kso:1:15
   1 | total = sum [1, 2]
                     ^
