docs/book/samples/appc/commas_check.kso
total = sum [1, 2]
print "{total}"
